--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -48,3 +48,12 @@ main > img {
     opacity: 0.5;
     background-color: var(--color-light);
 }
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
