--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,59 +1,103 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,387;1,387&family=Prompt:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,387;1,387&family=Prompt:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap");
 
 :root {
-    --font-family: "Epilogue", serif;
-    --font-optical-sizing: auto;
-    --font-weight: 387;
-    --font-style: normal;
-    --bg-gradient: linear-gradient(135deg, #0f0f0f, #1c1c1c, #292929, #363636, #434343);
-    --color-text: #ffffff;
-    --color-light: #ffffff;
-    --color-dark: #0f0f0f;
+  --font-family: "Epilogue", serif;
+  --font-optical-sizing: auto;
+  --font-weight: 387;
+  --font-style: normal;
+  --bg-gradient: linear-gradient(
+    135deg,
+    #0f0f0f,
+    #1c1c1c,
+    #292929,
+    #363636,
+    #434343
+  );
+  --color-text: #ffffff;
+  --color-light: #ffffff;
+  --color-dark: #0f0f0f;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    font-family: var(--font-family);
-    font-optical-sizing: var(--font-optical-sizing);
-    font-weight: var(--font-weight);
-    font-style: var(--font-style);
-    background: var(--bg-gradient);
-    color: var(--color-light);
-    background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+  font-family: var(--font-family);
+  font-optical-sizing: var(--font-optical-sizing);
+  font-weight: var(--font-weight);
+  font-style: var(--font-style);
+  background: var(--bg-gradient);
+  color: var(--color-light);
+  background-repeat: no-repeat;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
 }
 
 main > img {
-    width: 100%;
-    max-width: 150px;
-    height: auto;
-    border: 5px solid var(--color-dark);
-    border-radius: 50%;
-    opacity: 0.5;
-    background-color: var(--color-light);
+  width: 100%;
+  max-width: 150px;
+  height: auto;
+  border: 5px solid var(--color-dark);
+  border-radius: 50%;
+  opacity: 0.5;
+  background-color: var(--color-light);
 }
 
 canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background-color: transparent;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  list-style: none;
+}
+
+a {
+  cursor: pointer;
+  transition: all 0.25s;
+}
+
+a:hover {
+  color: var(--color-dark);
+  background-color: var(--color-light);
+  border-radius: 0.5rem;
+  transform: scale(1.05);
+}
+
+p {
+  margin-top: 0.25rem;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  border: 1px solid var(--color-light);
+  border-radius: 0.5rem;
+  color: var(--color-light);
+  text-decoration: none;
+  transition: all 0.3s;
 }
