--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,387;1,387&family=Prompt:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&display=swap");
 
 :root {
-  --font-family: "Epilogue", serif;
+  --font-family: "Chakra Petch", serif;
   --font-optical-sizing: auto;
   --font-weight: 387;
   --font-style: normal;
@@ -13,7 +13,7 @@
     #363636,
     #434343
   );
-  --color-text: #ffffff;
+  --color-text: #00ff18;
   --color-light: #ffffff;
   --color-dark: #0f0f0f;
 }
@@ -22,6 +22,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: var(--color-text);
 }
 
 body {
@@ -46,14 +47,17 @@ main {
   height: 100%;
 }
 
+i {
+  color: inherit;
+  background-color: inherit;
+}
+
 main > img {
   width: 100%;
   max-width: 150px;
   height: auto;
-  border: 5px solid var(--color-dark);
+  border: 5px solid var(--color-text);
   border-radius: 50%;
-  opacity: 0.5;
-  background-color: var(--color-light);
 }
 
 canvas {
@@ -75,14 +79,6 @@ ul {
 
 a {
   cursor: pointer;
-  transition: all 0.25s;
-}
-
-a:hover {
-  color: var(--color-dark);
-  background-color: var(--color-light);
-  border-radius: 0.5rem;
-  transform: scale(1.05);
 }
 
 p {
@@ -95,11 +91,30 @@ p {
   align-items: center;
   gap: 0.5rem;
   padding: 0.5rem;
-  border: 1px solid var(--color-light);
+  border: 1px solid var(--color-text);
   border-radius: 0.5rem;
-  color: var(--color-light);
+  color: var(--color-text);
   text-decoration: none;
-  transition: all 0.3s;
+  transition: all 0.25s;
+}
+
+.social-link:hover {
+  color: black;
+  background-color: var(--color-text);
+  border-radius: 0.5rem;
+  transform: scale(1.05);
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
+
+h5#typewriter {
+  max-width: 300px;
+  height: 128px;
+  line-height: 1rem;
+  text-align: justify;
+  font-weight: 400;
 }
 
 button#audio-switch {
@@ -114,4 +129,29 @@ button#audio-switch {
   padding: 0.5rem;
   font-size: 2rem;
   cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.heart-pulse {
+  animation: pulse 1s infinite;
 }
