--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -151,17 +151,23 @@ button#audio-switch {
 }
 
 @keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
+  0%,
+  20%,
+  40%,
+  60%,
+  80%,
   100% {
     transform: scale(1);
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: scale(1.1);
   }
 }
 
 .heart-pulse {
-  animation: pulse 1s infinite;
+  animation: pulse 4s infinite;
 }
