--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,7 @@
 :root {
   --color-text: #ffffff;
   --color-background: rgba(0, 0, 0, 0.85);
-  --font-family: 'Consolas', monospace;
+  --font-family: "Consolas", monospace;
   --font-size-base: 14px;
   --font-size-small: 12px;
   --font-size-large: 16px;
@@ -24,6 +24,11 @@ main {
   align-items: center;
 }
 
+a {
+  color: var(--color-text);
+  text-decoration: none;
+}
+
 #terminal-container {
   width: 100%;
   height: 100%;
@@ -35,7 +40,6 @@ main {
 
 .terminal {
   background-color: var(--color-background);
-  border: 2px solid var(--color-text);
   border-radius: 5px;
   padding: 20px;
   width: 100%;
@@ -137,7 +141,6 @@ main {
 }
 
 @keyframes blink {
-
   0%,
   100% {
     opacity: 1;
@@ -149,6 +152,8 @@ main {
 }
 
 .terminal-output {
+  display: flex;
+  flex-direction: column;
   color: white;
   margin-bottom: 15px;
   line-height: 2;
